fix: Fix transition nad visibility of mobile menu

--- a/components/backdrop/Backdrop.module.css
+++ b/components/backdrop/Backdrop.module.css
@@ -6,13 +6,15 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
-  transition: opacity 0.3s ease-in-out;
+  visibility: hidden;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   pointer-events: none;
   z-index: 1;
 }
 
 .overlay-active {
   opacity: 1;
-  transition: opacity 0.3s ease-in-out;
+  visibility: visible;
+  transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
   pointer-events: all;
 }
